...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_settings"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:scaleType="centerInside"
            app:backgroundTint="?attr/floatingBg"
...
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/tinder_logo"
            app:tint="?attr/btnColor"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_edit"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:fabCustomSize="70dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:scaleType="centerInside"
...
